# arduino

./: .gitignore  CMakeLists.txt
common/telemetry/: CMakeLists.txt  cppext.h  crc16.h  dictionnary.h  framing.h  telemetry_core.h  telemetry_utils.h
common/unittest/: CMakeLists.txt  main.cc
common/unittest/telemetry/: attach_test.cc  dictionary_test.cc  emplace_float.cc  emplace_int.cc  emplace_string.cc  framing_test.cc  match_test.cc  pub_sub_float_test.cc  pub_sub_int_test.cc  pub_sub_string_test.cc  pub_sub_uint_test.cc  update_float.cc  update_int.cc  update_string.cc
desktop/: CMakeLists.txt  arduino.cpp  arduino.h  main.cpp
